--- a/technical_analysis/visualizations_output/clean_energy_materials_scores.html
+++ b/technical_analysis/visualizations_output/clean_energy_materials_scores.html
@@ -85,39 +85,43 @@
         <thead>
             <tr>
                 <th>Symbol</th>
-                <th>4H (yfinance)<br><small>Gold</small></th>
-                <th>4H (yfinance)<br><small>USD</small></th>
-                <th>1D (yfinance)<br><small>Gold</small></th>
-                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
+                <th>2D (yfinance)<br><small>Silver</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
+                <th>1W (yfinance)<br><small>Silver</small></th>
                 <th>1W (yfinance)<br><small>USD</small></th>
                 <th>2W (yfinance)<br><small>Gold</small></th>
+                <th>2W (yfinance)<br><small>Silver</small></th>
                 <th>2W (yfinance)<br><small>USD</small></th>
                 <th>1M (yfinance)<br><small>Gold</small></th>
+                <th>1M (yfinance)<br><small>Silver</small></th>
                 <th>1M (yfinance)<br><small>USD</small></th>
                 <th>2M (yfinance)<br><small>Gold</small></th>
+                <th>2M (yfinance)<br><small>Silver</small></th>
                 <th>2M (yfinance)<br><small>USD</small></th>
                 <th>6M (yfinance)<br><small>Gold</small></th>
+                <th>6M (yfinance)<br><small>Silver</small></th>
                 <th>6M (yfinance)<br><small>USD</small></th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td><strong>ALB</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>14.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -125,18 +129,20 @@
             </tr>
             <tr>
                 <td><strong>CCJ</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -144,18 +150,20 @@
             </tr>
             <tr>
                 <td><strong>AEM</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.8</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -163,18 +171,20 @@
             </tr>
             <tr>
                 <td><strong>FCX</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>12.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>16.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>17.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
