--- a/technical_analysis/visualizations_output/renewable_energy_scores.html
+++ b/technical_analysis/visualizations_output/renewable_energy_scores.html
@@ -85,39 +85,43 @@
         <thead>
             <tr>
                 <th>Symbol</th>
-                <th>4H (yfinance)<br><small>Gold</small></th>
-                <th>4H (yfinance)<br><small>USD</small></th>
-                <th>1D (yfinance)<br><small>Gold</small></th>
-                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
+                <th>2D (yfinance)<br><small>Silver</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
+                <th>1W (yfinance)<br><small>Silver</small></th>
                 <th>1W (yfinance)<br><small>USD</small></th>
                 <th>2W (yfinance)<br><small>Gold</small></th>
+                <th>2W (yfinance)<br><small>Silver</small></th>
                 <th>2W (yfinance)<br><small>USD</small></th>
                 <th>1M (yfinance)<br><small>Gold</small></th>
+                <th>1M (yfinance)<br><small>Silver</small></th>
                 <th>1M (yfinance)<br><small>USD</small></th>
                 <th>2M (yfinance)<br><small>Gold</small></th>
+                <th>2M (yfinance)<br><small>Silver</small></th>
                 <th>2M (yfinance)<br><small>USD</small></th>
                 <th>6M (yfinance)<br><small>Gold</small></th>
+                <th>6M (yfinance)<br><small>Silver</small></th>
                 <th>6M (yfinance)<br><small>USD</small></th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td><strong>ENPH</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>14.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>14.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>14.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -125,18 +129,20 @@
             </tr>
             <tr>
                 <td><strong>SEDG</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -144,37 +150,20 @@
             </tr>
             <tr>
                 <td><strong>RUN</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-            </tr>
-            <tr>
-                <td><strong>NEE</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -182,18 +171,20 @@
             </tr>
             <tr>
                 <td><strong>PLUG</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
