--- a/technical_analysis/visualizations_output/silver_miners_esg_scores.html
+++ b/technical_analysis/visualizations_output/silver_miners_esg_scores.html
@@ -85,39 +85,43 @@
         <thead>
             <tr>
                 <th>Symbol</th>
-                <th>4H (yfinance)<br><small>Gold</small></th>
-                <th>4H (yfinance)<br><small>USD</small></th>
-                <th>1D (yfinance)<br><small>Gold</small></th>
-                <th>1D (yfinance)<br><small>USD</small></th>
                 <th>2D (yfinance)<br><small>Gold</small></th>
+                <th>2D (yfinance)<br><small>Silver</small></th>
                 <th>2D (yfinance)<br><small>USD</small></th>
                 <th>1W (yfinance)<br><small>Gold</small></th>
+                <th>1W (yfinance)<br><small>Silver</small></th>
                 <th>1W (yfinance)<br><small>USD</small></th>
                 <th>2W (yfinance)<br><small>Gold</small></th>
+                <th>2W (yfinance)<br><small>Silver</small></th>
                 <th>2W (yfinance)<br><small>USD</small></th>
                 <th>1M (yfinance)<br><small>Gold</small></th>
+                <th>1M (yfinance)<br><small>Silver</small></th>
                 <th>1M (yfinance)<br><small>USD</small></th>
                 <th>2M (yfinance)<br><small>Gold</small></th>
+                <th>2M (yfinance)<br><small>Silver</small></th>
                 <th>2M (yfinance)<br><small>USD</small></th>
                 <th>6M (yfinance)<br><small>Gold</small></th>
+                <th>6M (yfinance)<br><small>Silver</small></th>
                 <th>6M (yfinance)<br><small>USD</small></th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td><strong>PAAS</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -125,18 +129,20 @@
             </tr>
             <tr>
                 <td><strong>AG</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -144,18 +150,20 @@
             </tr>
             <tr>
                 <td><strong>WPM</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>13.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>13.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -163,18 +171,20 @@
             </tr>
             <tr>
                 <td><strong>HL</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -182,18 +192,20 @@
             </tr>
             <tr>
                 <td><strong>SVM</strong></td>
-                <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.9</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>12.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.3</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
