--- a/technical_analysis/visualizations_output/cme_sunday_open.html
+++ b/technical_analysis/visualizations_output/cme_sunday_open.html
@@ -30,14 +30,14 @@
                 </tr>
             </thead>
             <tbody>
-        <tr><td>BTC-USD</td><td>BTC</td><td><strong>↑↑</strong></td><td>+2.16%</td><td>Strong Up</td></tr>
+        <tr><td>BTC-USD</td><td>BTC</td><td><strong>↑↑</strong></td><td>+1.96%</td><td>Strong Up</td></tr>
         <tr><td>CL=F</td><td>CL (fut)</td><td><strong>↓</strong></td><td>-0.08%</td><td>Down</td></tr>
-        <tr><td>ETH-USD</td><td>ETH</td><td><strong>↑↑</strong></td><td>+4.43%</td><td>Strong Up</td></tr>
+        <tr><td>ETH-USD</td><td>ETH</td><td><strong>↑↑</strong></td><td>+1.21%</td><td>Strong Up</td></tr>
         <tr><td>GC=F</td><td>GC (fut)</td><td><strong>↑</strong></td><td>+0.29%</td><td>Up</td></tr>
         <tr><td>HG=F</td><td>HG (fut)</td><td><strong>↓↓</strong></td><td>-0.82%</td><td>Strong Down</td></tr>
-        <tr><td>QQQ</td><td>QQQ</td><td><strong>↑</strong></td><td>+0.08%</td><td>Up</td></tr>
+        <tr><td>QQQ</td><td>QQQ</td><td><strong>↓↓</strong></td><td>-0.51%</td><td>Strong Down</td></tr>
         <tr><td>SI=F</td><td>SI (fut)</td><td><strong>↑↑</strong></td><td>+1.75%</td><td>Strong Up</td></tr>
-        <tr><td>SPY</td><td>SPY</td><td><strong>↑</strong></td><td>+0.18%</td><td>Up</td></tr>
+        <tr><td>SPY</td><td>SPY</td><td><strong>↓</strong></td><td>-0.35%</td><td>Down</td></tr>
             </tbody>
         </table>
     </div>
