--- a/technical_analysis/visualizations_output/wealth_phase.html
+++ b/technical_analysis/visualizations_output/wealth_phase.html
@@ -42,7 +42,7 @@
             <p class="phase-perf" style="font-size: 0.85em; margin: 2px 0;"></p>
             <p class="phase-desc">Money in cash and short-term instruments. First refuge and base.</p>
         </div>
-        <div class="phase-card" id="phase-metals" data-temp-1m="very_hot" data-temp-1w="slightly_cold" data-avg-1m="+15.9%" data-avg-1w="-15.7%" data-color-1m="#b71c1c" data-color-1w="#0288d1">
+        <div class="phase-card" id="phase-metals" data-temp-1m="very_hot" data-temp-1w="slightly_hot" data-avg-1m="+3.2%" data-avg-1w="-1.9%" data-color-1m="#b71c1c" data-color-1w="#fb8c00">
             <div class="phase-order" style="font-size: 0.75em; margin-bottom: 4px;">Phase 2 ← prev | next →</div>
             <div class="phase-icon phase-icon-default">🥇</div>
             <h3 class="phase-name">Metals</h3>
@@ -50,7 +50,7 @@
             <p class="phase-perf" style="font-size: 0.85em; margin: 2px 0;"></p>
             <p class="phase-desc">Gold, Silver. Store of value; hot when SPX drops vs metals.</p>
         </div>
-        <div class="phase-card" id="phase-commodities" data-temp-1m="neutral" data-temp-1w="slightly_hot" data-avg-1m="+0.7%" data-avg-1w="-3.6%" data-color-1m="#43a047" data-color-1w="#fb8c00">
+        <div class="phase-card" id="phase-commodities" data-temp-1m="neutral" data-temp-1w="neutral" data-avg-1m="-2.5%" data-avg-1w="-3.2%" data-color-1m="#43a047" data-color-1w="#43a047">
             <div class="phase-order" style="font-size: 0.75em; margin-bottom: 4px;">Phase 3 ← prev | next →</div>
             <div class="phase-icon phase-icon-default">🌾</div>
             <h3 class="phase-name">Commodities</h3>
@@ -58,7 +58,7 @@
             <p class="phase-perf" style="font-size: 0.85em; margin: 2px 0;"></p>
             <p class="phase-desc">Agricultural, Energy, Industrial. Real assets; next after metals in risk-on flow.</p>
         </div>
-        <div class="phase-card" id="phase-index" data-temp-1m="slightly_hot" data-temp-1w="very_hot" data-avg-1m="+2.1%" data-avg-1w="-0.4%" data-color-1m="#fb8c00" data-color-1w="#b71c1c">
+        <div class="phase-card" id="phase-index" data-temp-1m="hot" data-temp-1w="very_hot" data-avg-1m="+3.2%" data-avg-1w="+0.9%" data-color-1m="#e65100" data-color-1w="#b71c1c">
             <div class="phase-order" style="font-size: 0.75em; margin-bottom: 4px;">Phase 4 ← prev | next →</div>
             <div class="phase-icon phase-icon-default">📈</div>
             <h3 class="phase-name">Index / Top Companies</h3>
@@ -66,7 +66,7 @@
             <p class="phase-perf" style="font-size: 0.85em; margin: 2px 0;"></p>
             <p class="phase-desc">SPY, QQQ, DIA. Broad market; capital moves to large caps as confidence builds.</p>
         </div>
-        <div class="phase-card" id="phase-hot" data-temp-1m="hot" data-temp-1w="hot" data-avg-1m="+3.1%" data-avg-1w="-1.7%" data-color-1m="#e65100" data-color-1w="#e65100">
+        <div class="phase-card" id="phase-hot" data-temp-1m="slightly_hot" data-temp-1w="hot" data-avg-1m="+2.1%" data-avg-1w="-0.2%" data-color-1m="#fb8c00" data-color-1w="#e65100">
             <div class="phase-order" style="font-size: 0.75em; margin-bottom: 4px;">Phase 5 ← prev | next →</div>
             <div class="phase-icon phase-icon-default">🔥</div>
             <h3 class="phase-name">Hot Stocks</h3>
@@ -74,7 +74,7 @@
             <p class="phase-perf" style="font-size: 0.85em; margin: 2px 0;"></p>
             <p class="phase-desc">FAANG, Semis, momentum. Higher risk–reward as cycle extends.</p>
         </div>
-        <div class="phase-card" id="phase-risk" data-temp-1m="slightly_cold" data-temp-1w="neutral" data-avg-1m="-5.4%" data-avg-1w="-9.9%" data-color-1m="#0288d1" data-color-1w="#43a047">
+        <div class="phase-card" id="phase-risk" data-temp-1m="slightly_cold" data-temp-1w="slightly_cold" data-avg-1m="-27.5%" data-avg-1w="-18.8%" data-color-1m="#0288d1" data-color-1w="#0288d1">
             <div class="phase-order" style="font-size: 0.75em; margin-bottom: 4px;">Phase 6 ← prev</div>
             <div class="phase-icon phase-icon-default">🚀</div>
             <h3 class="phase-name">Highest Risk Curve</h3>
