--- a/technical_analysis/visualizations_output/tech_stocks_scores.html
+++ b/technical_analysis/visualizations_output/tech_stocks_scores.html
@@ -82,7 +82,7 @@
     </div>    <div class="legend" style="margin-top: 15px; background: #f0f4f8; padding: 10px; border-left: 4px solid #2c3e50;">
         <h3 style="margin-top: 0;">CME Sunday 6pm ET Open (market hand)</h3>
         <p style="margin: 5px 0; color: #333;">Direction from CME open (first 24h or weekly gap). Icon only, not part of score.</p>
-        <p style="margin: 8px 0;"><span class="cme-item" title="CME Sunday 6pm ET">BTC: <strong>↑↑</strong> +2.16%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">ETH: <strong>↑↑</strong> +4.43%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">GC (fut): <strong>↑</strong> +0.29%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SI (fut): <strong>↑↑</strong> +1.75%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">HG (fut): <strong>↓↓</strong> -0.82%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">CL (fut): <strong>↓</strong> -0.08%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SPY: <strong>↑</strong> +0.18%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">QQQ: <strong>↑</strong> +0.08%</span></p>
+        <p style="margin: 8px 0;"><span class="cme-item" title="CME Sunday 6pm ET">BTC: <strong>↑↑</strong> +1.96%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">ETH: <strong>↑↑</strong> +1.21%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">GC (fut): <strong>↑</strong> +0.29%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SI (fut): <strong>↑↑</strong> +1.75%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">HG (fut): <strong>↓↓</strong> -0.82%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">CL (fut): <strong>↓</strong> -0.08%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SPY: <strong>↓</strong> -0.35%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">QQQ: <strong>↓↓</strong> -0.51%</span></p>
         <p style="margin: 5px 0; font-size: 0.85em; color: #666;">↑↑ strong up &nbsp; ↑ up &nbsp; → flat &nbsp; ↓ down &nbsp; ↓↓ strong down</p>
     </div>
 
@@ -114,18 +114,18 @@
         <tbody>
             <tr>
                 <td><strong>TMUS</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.3</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-3.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -135,18 +135,18 @@
             </tr>
             <tr>
                 <td><strong>NOW</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>10.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -156,18 +156,18 @@
             </tr>
             <tr>
                 <td><strong>PATH</strong></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-3.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.4</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>9.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -177,18 +177,18 @@
             </tr>
             <tr>
                 <td><strong>DLO</strong></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-3.7</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.2</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.8</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -198,18 +198,18 @@
             </tr>
             <tr>
                 <td><strong>PGY</strong></td>
-                <td><div class='score-cell' style='background-color: #FF4500;'>-2.7</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFA500;'>-0.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
